chore: add "build:babel" script

--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
   "scripts": {
     "eslint": "eslint \"packages/**/*.{ts,tsx}\" --quiet",
     "build": "lerna run build --stream",
+    "build:babel": "lerna run build:babel --stream --parallel",
     "build:components": "lerna run build --scope=@webiny/serverless-* --stream",
     "build:apps": "lerna run build --scope=@webiny/app* --stream",
     "build:app-templates": "lerna run build --scope=@webiny/app-template* --stream",
