--- a/packages/serverless-files/package.json
+++ b/packages/serverless-files/package.json
@@ -14,7 +14,8 @@
     "@types/sharp": "^0.25.0"
   },
   "scripts": {
-    "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\"",
+    "build:babel": "babel src -d dist --source-maps --copy-files --extensions \".ts\"",
+    "build": "rimraf ./dist *.tsbuildinfo && yarn build:babel",
     "watch": "babel src -d dist --source-maps --copy-files --extensions \".ts\" --watch",
     "postbuild": "cp package.json LICENSE README.md dist/ && tsc -p tsconfig.build.json",
     "deploy": "cd test && sls --debug"
