Remove unnecessary packages from package package.json

--- a/packages/cli-plugin-scaffold-app-graphql/package.json
+++ b/packages/cli-plugin-scaffold-app-graphql/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@webiny/cli-plugin-scaffold-graphql-app",
+  "name": "@webiny/cli-plugin-scaffold-app-graphql",
   "version": "4.6.0",
   "description": "Generate Webiny GraphQL React App",
   "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/webiny/webiny-js.git",
-    "directory": "packages/cli-plugin-scaffold-graphql-app"
+    "directory": "packages/cli-plugin-scaffold-app-graphql"
   },
   "author": "",
   "license": "MIT",
@@ -15,18 +15,14 @@
   },
   "homepage": "https://github.com/webiny/webiny-js#readme",
   "dependencies": {
-    "@babel/core": "^7.9.6",
     "case": "^1.6.3",
-    "execa": "^4.0.2",
     "find-up": "^4.1.0",
-    "load-json-file": "^6.2.0",
-    "lodash.camelcase": "^4.3.0",
     "lodash.kebabcase": "^4.1.1",
     "ncp": "^2.0.0",
-    "pluralize": "^8.0.0",
     "prettier": "^2.0.5",
     "replace-in-path": "^1.0.2",
-    "write-json-file": "^4.3.0"
+	"fast-glob": "^3.2.4",
+	"util": "^0.10.3"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.1.5"
