--- a/packages/app-template-admin/package.json
+++ b/packages/app-template-admin/package.json
@@ -54,8 +54,8 @@
     "directory": "dist"
   },
   "scripts": {
-    "build:babel": "babel src -d dist --source-maps --copy-files --extensions \".ts,.tsx\"",
-    "build": "rimraf ./dist *.tsbuildinfo && yarn build:babel",
+    "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts,.tsx\"",
+    "build:ci:cy": "babel src -d dist --copy-files --extensions \".ts,.tsx\" && cp package.json dist/",
     "watch": "babel src -d dist --source-maps --copy-files --extensions \".ts,.tsx\" --watch",
     "postbuild": "cp package.json LICENSE README.md dist/ && tsc -p tsconfig.build.json"
   },
