--- a/packages/cli-plugin-scaffold-app-graphql/package.json
+++ b/packages/cli-plugin-scaffold-app-graphql/package.json
@@ -16,6 +16,7 @@
   "homepage": "https://github.com/webiny/webiny-js#readme",
   "dependencies": {
     "case": "^1.6.3",
+	"chalk": "^4.1.0",
     "find-up": "^4.1.0",
     "lodash.kebabcase": "^4.1.1",
     "ncp": "^2.0.0",
