--- a/packages/cwp-template-cms/template/api/files/manage/tsconfig.json
+++ b/packages/cwp-template-cms/template/api/files/manage/tsconfig.json
@@ -1,7 +1,3 @@
 {
-  "extends": "../../../../tsconfig",
-  "references": [
-    { "path": "../../../../packages/serverless-files" },
-    { "path": "../../../../packages/handler" }
-  ]
+  "extends": "../../../../tsconfig"
 }
