--- a/packages/cwp-template-full/template/api/cms/content/tsconfig.json
+++ b/packages/cwp-template-full/template/api/cms/content/tsconfig.json
@@ -1,11 +1,3 @@
 {
-  "extends": "../../../../tsconfig",
-  "references": [
-    { "path": "../../../../packages/api-plugin-commodo-db-proxy" },
-    { "path": "../../../../packages/api-headless-cms" },
-    { "path": "../../../../packages/api-i18n" },
-    { "path": "../../../../packages/api-security" },
-    { "path": "../../../../packages/api-settings-manager" },
-    { "path": "../../../../packages/handler" }
-  ]
+  "extends": "../../../../tsconfig"
 }
