--- a/packages/cwp-template-full/template/api/settingsManager/tsconfig.json
+++ b/packages/cwp-template-full/template/api/settingsManager/tsconfig.json
@@ -1,8 +1,3 @@
 {
-  "extends": "../../../tsconfig",
-  "references": [
-    { "path": "../../../packages/api-settings-manager" },
-    { "path": "../../../packages/api-plugin-commodo-db-proxy" },
-    { "path": "../../../packages/handler" }
-  ]
+  "extends": "../../../tsconfig"
 }
