--- a/.github/workflows/ciBranchPush.yml
+++ b/.github/workflows/ciBranchPush.yml
@@ -31,6 +31,11 @@ jobs:
         run: yarn build
 
       - uses: doitadrian/action-post-run@1.0.0
+        id: destroy-mongodb-database
+        with:
+          command: yarn setup-ci-cypress --post-run
+
+      - uses: doitadrian/action-post-run@1.0.0
         id: webiny-remove-apps
         with:
           command: yarn webiny remove apps --env prod
