--- a/.github/workflows/ciBranchPush.yml
+++ b/.github/workflows/ciBranchPush.yml
@@ -9,6 +9,7 @@ env:
   MONGODB_SERVER: ${{ secrets.MONGODB_SERVER }}
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  WEBINY_TRACKING_PREFIX: ${{ secrets.WEBINY_TRACKING_PREFIX }}
 
 jobs:
   build-test-1:
@@ -44,9 +45,6 @@ jobs:
         id: webiny-remove-api
         with:
           command: yarn webiny remove api --env prod
-
-      - name: Make sure tracking is not enabled
-        run: yarn webiny disable-tracking
 
       - name: Deploy API stack
         run: yarn webiny deploy api --env prod
@@ -100,9 +98,6 @@ jobs:
         with:
           command: yarn webiny remove api --env prod
 
-      - name: Make sure tracking is not enabled
-        run: yarn webiny disable-tracking
-
       - name: Deploy API stack
         run: yarn webiny deploy api --env prod
 
@@ -154,9 +149,6 @@ jobs:
         id: webiny-remove-api
         with:
           command: yarn webiny remove api --env prod
-
-      - name: Make sure tracking is not enabled
-        run: yarn webiny disable-tracking
 
       - name: Deploy API stack
         run: yarn webiny deploy api --env prod
