--- a/.github/workflows/releaseBeta.yml
+++ b/.github/workflows/releaseBeta.yml
@@ -57,7 +57,7 @@ jobs:
         run: yarn lerna publish from-package --dist-tag beta --yes
 
   build-e2e-test-1:
-    name: Build & E2E test (attempt \#1)
+    name: Build & E2E test (attempt 1)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -109,7 +109,7 @@ jobs:
         run: yarn cypress run --spec "cypress/integration/admin/**/*.spec.js"
 
   build-e2e-test-2:
-    name: Build & E2E test (attempt \#2)
+    name: Build & E2E test (attempt 2)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -161,7 +161,7 @@ jobs:
         run: yarn cypress run --spec "cypress/integration/admin/**/*.spec.js"
 
   build-e2e-test-3:
-    name: Build & E2E test (attempt \#3)
+    name: Build & E2E test (attempt 3)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
