--- a/.github/workflows/pullRequests.yml
+++ b/.github/workflows/pullRequests.yml
@@ -60,7 +60,7 @@ jobs:
         run: yarn test
 
   build-e2e-test-1:
-    name: Build & E2E test (attempt \#1)
+    name: Build & E2E test (attempt 1)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -112,7 +112,7 @@ jobs:
         run: yarn cypress run --spec "cypress/integration/admin/**/*.spec.js"
 
   build-e2e-test-2:
-    name: Build & E2E test (attempt \#2)
+    name: Build & E2E test (attempt 2)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -164,7 +164,7 @@ jobs:
         run: yarn cypress run --spec "cypress/integration/admin/**/*.spec.js"
 
   build-e2e-test-3:
-    name: Build & E2E test (attempt \#3)
+    name: Build & E2E test (attempt 3)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
