fix: renamed basic to admin

--- a/packages/cwp-template-admin/template/apps/admin/public/manifest.json
+++ b/packages/cwp-template-admin/template/apps/admin/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Webiny",
-  "short_name": "Webiny Basic",
+  "short_name": "Webiny admin",
   "icons": [
     {
       "src": "/favicons/android-chrome-192x192.png",
