--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -132,6 +132,7 @@
     "./packages/create-webiny-project",
     "./packages/cwp-template-full",
     "./packages/cwp-template-cms",
+    "./packages/cwp-template-admin",
     "./packages/project-utils",
     "./packages/serverless-api-gateway",
     "./packages/serverless-apollo-service",
