fix: remove "tsx" extension

--- a/packages/cli-plugin-scaffold-node-package/template/package.json
+++ b/packages/cli-plugin-scaffold-node-package/template/package.json
@@ -4,6 +4,6 @@
   "description": "",
   "license": "MIT",
   "scripts": {
-    "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts,.tsx\""
+    "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\""
   }
 }
