--- a/packages/cli-plugin-scaffold-react-package/package.json
+++ b/packages/cli-plugin-scaffold-react-package/package.json
@@ -17,8 +17,11 @@
   "dependencies": {
     "execa": "^4.0.3",
     "find-up": "^4.1.0",
-    "lodash.kebabcase": "^4.1.1",
-    "ncp": "^2.0.0"
+    "ncp": "^2.0.0",
+    "replace-in-path": "^1.0.2",
+    "case": "^1.6.3",
+    "load-json-file": "^6.2.0",
+    "write-json-file": "^4.3.0"
   },
   "publishConfig": {
     "access": "public",
