--- a/packages/cli-plugin-scaffold-app-graphql/package.json
+++ b/packages/cli-plugin-scaffold-app-graphql/package.json
@@ -18,11 +18,10 @@
     "case": "^1.6.3",
 	"chalk": "^4.1.0",
     "find-up": "^4.1.0",
-    "lodash.kebabcase": "^4.1.1",
     "ncp": "^2.0.0",
-	"pluralize": "^8.0.0",
+    "indent-string": "^4.0.0",
+    "pluralize": "^8.0.0",
     "replace-in-path": "^1.0.2",
-	"fast-glob": "^3.2.4",
 	"util": "^0.10.3"
   },
   "devDependencies": {
