--- a/packages/cwp-template-cms/package.json
+++ b/packages/cwp-template-cms/package.json
@@ -14,7 +14,8 @@
     "fs-extra": "^9.0.0",
     "load-json-file": "^6.2.0",
     "uuid": "^7.0.3",
-    "write-json-file": "^4.3.0"
+    "write-json-file": "^4.3.0",
+    "indent-string": "^4.0.0"
   },
   "adio": {
     "ignoreDirs": [
