wip: restructure security

--- a/packages/app-plugin-security-cognito/tsconfig.build.json
+++ b/packages/app-plugin-security-cognito/tsconfig.build.json
@@ -1,7 +1,14 @@
 {
   "extends": "../../tsconfig.build.json",
   "include": ["./src"],
-  "exclude": ["node_modules", "../app", "../app-security", "../plugins", "../ui"],
+  "exclude": [
+    "node_modules",
+    "../app",
+    "../app-security",
+    "../app-security-user-management",
+    "../plugins",
+    "../ui"
+  ],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
@@ -10,6 +17,7 @@
   "references": [
     { "path": "../app/tsconfig.build.json" },
     { "path": "../app-security/tsconfig.build.json" },
+    { "path": "../app-security-user-management/tsconfig.build.json" },
     { "path": "../plugins/tsconfig.build.json" },
     { "path": "../ui/tsconfig.build.json" }
   ]
