--- a/packages/app-plugin-security-cognito/package.json
+++ b/packages/app-plugin-security-cognito/package.json
@@ -14,9 +14,12 @@
   "dependencies": {
     "@aws-amplify/auth": "^1.3.3",
     "@webiny/app": "^4.6.0",
+    "@webiny/app-security-user-management": "^4.6.0",
     "@webiny/app-security": "^4.6.0",
     "@webiny/plugins": "^4.6.0",
     "@webiny/ui": "^4.6.0",
+    "apollo-link": "^1.2.14",
+    "apollo-link-context": "^1.0.20",
     "graphql-tag": "^2.10.1",
     "invariant": "^2.2.4",
     "react-apollo": "^3.1.0",
