--- a/packages/app-plugin-security-cognito/tsconfig.json
+++ b/packages/app-plugin-security-cognito/tsconfig.json
@@ -3,6 +3,7 @@
   "references": [
     { "path": "../app" },
     { "path": "../app-security" },
+    { "path": "../app-security-user-management" },
     { "path": "../plugins" },
     { "path": "../ui" }
   ]
