--- a/packages/cli-plugin-scaffold-react-package/package.json
+++ b/packages/cli-plugin-scaffold-react-package/package.json
@@ -21,7 +21,8 @@
     "load-json-file": "^6.2.0",
     "ncp": "^2.0.0",
     "replace-in-path": "^1.0.2",
-    "write-json-file": "^4.3.0"
+    "write-json-file": "^4.3.0",
+    "chalk": "^2.4.2"
   },
   "publishConfig": {
     "access": "public",
