--- a/packages/api-security/package.json
+++ b/packages/api-security/package.json
@@ -18,12 +18,8 @@
     "@webiny/commodo": "^4.6.0",
     "@webiny/commodo-graphql": "^4.6.0",
     "@webiny/graphql": "^4.6.0",
-    "@webiny/validation": "^4.6.0",
-    "graphql": "^14.6.0",
-    "graphql-tag": "^2.10.1",
     "jsonwebtoken": "^8.2.2",
     "lodash": "^4.17.4",
-    "md5": "^2.2.1",
     "minimatch": "^3.0.4"
   },
   "devDependencies": {
@@ -31,10 +27,14 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.8.3",
+    "@commodo/fields-storage-nedb": "^2.0.1",
     "@shelf/jest-mongodb": "^1.1.5",
     "@webiny/api-plugin-commodo-mongodb": "^4.6.0",
+    "@webiny/api-plugin-commodo-nedb": "^4.6.0",
     "@webiny/handler": "^4.6.0",
+    "@webiny/handler-apollo-server": "^4.6.0",
     "eslint-plugin-jest": "^22.17.0",
+    "mdbid": "^1.0.0",
     "mongodb": "^3.5.7"
   },
   "optionalDependencies": {
