--- a/packages/app-security-user-management/package.json
+++ b/packages/app-security-user-management/package.json
@@ -23,14 +23,12 @@
     "@webiny/react-router": "^4.6.0",
     "@webiny/ui": "^4.6.0",
     "@webiny/validation": "^4.6.0",
-    "apollo-link": "^1.2.1",
     "dot-prop-immutable": "^1.4.0",
     "emotion": "10.0.17",
     "graphql-tag": "^2.10.1",
     "lodash": "^4.17.11",
     "react-apollo": "^3.1.3",
-    "react-helmet": "^5.2.0",
-    "store": "^2.0.12"
+    "react-helmet": "^5.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
