--- a/packages/app-security/package.json
+++ b/packages/app-security/package.json
@@ -15,20 +15,7 @@
   "dependencies": {
     "@babel/runtime": "^7.5.5",
     "@webiny/app": "^4.5.0",
-    "@webiny/app-admin": "^4.5.0",
-    "@webiny/form": "^4.5.0",
-    "@webiny/plugins": "^4.5.0",
-    "@webiny/react-router": "^4.5.0",
-    "@webiny/ui": "^4.5.0",
-    "@webiny/validation": "^4.5.0",
-    "apollo-link": "^1.2.1",
-    "dot-prop-immutable": "^1.4.0",
-    "emotion": "10.0.17",
-    "graphql-tag": "^2.10.1",
-    "lodash": "^4.17.11",
-    "react-apollo": "^3.1.3",
-    "react-helmet": "^5.2.0",
-    "store": "^2.0.12"
+    "minimatch": "^3.0.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
