--- a/packages/app-template-admin/package.json
+++ b/packages/app-template-admin/package.json
@@ -26,6 +26,7 @@
     "@webiny/app-plugin-security-cognito": "^4.6.0",
     "@webiny/app-security": "^4.6.0",
     "@webiny/app-template": "^4.6.0",
+    "@webiny/plugins": "^4.6.0",
     "@webiny/react-router": "^4.6.0",
     "@webiny/ui": "^4.6.0",
     "apollo-cache-inmemory": "^1.6.5",
