chore: remove extra Cypress jobs

--- a/.github/workflows/masterBranchPush.yml
+++ b/.github/workflows/masterBranchPush.yml
@@ -34,112 +34,8 @@ jobs:
       - name: Run tests
         run: yarn test
 
-  build-e2e-test-1:
+  build-e2e-test:
     name: Build & E2E test (attempt 1)
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/setup-node@v2-beta
-        with:
-          node-version: 12
-
-      - name: Install dependencies
-        run: yarn --frozen-lockfile
-
-      - name: Setup config files
-        run: yarn setup-ci-cypress
-
-      - name: Build packages
-        run: yarn build
-
-      - uses: webiny/action-post-run@1.0.0
-        id: destroy-mongodb-database
-        with:
-          command: yarn setup-ci-cypress --post-run
-
-      - uses: webiny/action-post-run@1.0.0
-        id: webiny-remove-apps
-        with:
-          command: yarn webiny remove apps --env prod
-
-      - uses: webiny/action-post-run@1.0.0
-        id: webiny-remove-api
-        with:
-          command: yarn webiny remove api --env prod
-
-      - name: Deploy API stack
-        run: yarn webiny deploy api --env prod
-
-      - name: Deploy Apps stack
-        run: yarn webiny deploy apps --env prod
-
-      - name: Setup Cypress config
-        run: yarn setup-cypress
-
-      - name: Wait for the site to be deployed
-        run: node scripts/waitToDeploy
-
-      - name: Cypress - run Admin app installation test
-        run: yarn cypress run --spec "cypress/integration/adminInstallation/**/*.spec.js"
-
-      - name: Cypress - run the rest of Admin app tests
-        run: yarn cypress run --spec "cypress/integration/admin/**/*.spec.js"
-
-  build-e2e-test-2:
-    name: Build & E2E test (attempt 2)
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/setup-node@v2-beta
-        with:
-          node-version: 12
-
-      - name: Install dependencies
-        run: yarn --frozen-lockfile
-
-      - name: Setup config files
-        run: yarn setup-ci-cypress
-
-      - name: Build packages
-        run: yarn build
-
-      - uses: webiny/action-post-run@1.0.0
-        id: destroy-mongodb-database
-        with:
-          command: yarn setup-ci-cypress --post-run
-
-      - uses: webiny/action-post-run@1.0.0
-        id: webiny-remove-apps
-        with:
-          command: yarn webiny remove apps --env prod
-
-      - uses: webiny/action-post-run@1.0.0
-        id: webiny-remove-api
-        with:
-          command: yarn webiny remove api --env prod
-
-      - name: Deploy API stack
-        run: yarn webiny deploy api --env prod
-
-      - name: Deploy Apps stack
-        run: yarn webiny deploy apps --env prod
-
-      - name: Setup Cypress config
-        run: yarn setup-cypress
-
-      - name: Wait for the site to be deployed
-        run: node scripts/waitToDeploy
-
-      - name: Cypress - run Admin app installation test
-        run: yarn cypress run --spec "cypress/integration/adminInstallation/**/*.spec.js"
-
-      - name: Cypress - run the rest of Admin app tests
-        run: yarn cypress run --spec "cypress/integration/admin/**/*.spec.js"
-
-  build-e2e-test-3:
-    name: Build & E2E test (attempt 3)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
