--- a/.github/workflows/pullRequests.yml
+++ b/.github/workflows/pullRequests.yml
@@ -60,7 +60,7 @@ jobs:
         run: yarn test
 
   build-e2e-test:
-    name: Build & E2E test (attempt 1)
+    name: Build and E2E test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
