--- a/.github/workflows/releaseLatest.yml
+++ b/.github/workflows/releaseLatest.yml
@@ -51,7 +51,7 @@ jobs:
         run: yarn lerna publish from-package --yes
 
   build-e2e-test:
-    name: Build & E2E test (attempt 1)
+    name: Build and E2E test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
