--- a/api/cms/graphql/tsconfig.json
+++ b/api/cms/graphql/tsconfig.json
@@ -4,6 +4,7 @@
     { "path": "../../../packages/api-plugin-commodo-db-proxy" },
     { "path": "../../../packages/api-headless-cms" },
     { "path": "../../../packages/api-security" },
+    { "path": "../../../packages/api-security-permissions-manager" },
     { "path": "../../../packages/api-settings-manager" },
     { "path": "../../../packages/handler" },
     { "path": "../../../packages/handler-apollo-server" }
