--- a/api/formBuilder/tsconfig.json
+++ b/api/formBuilder/tsconfig.json
@@ -4,6 +4,7 @@
     { "path": "../../packages/api-plugin-commodo-db-proxy" },
     { "path": "../../packages/api-i18n" },
     { "path": "../../packages/api-security" },
+    { "path": "../../packages/api-security-permissions-manager" },
     { "path": "../../packages/api-settings-manager" },
     { "path": "../../packages/api-form-builder" },
     { "path": "../../packages/handler" },
