--- a/api/security/graphql/tsconfig.json
+++ b/api/security/graphql/tsconfig.json
@@ -3,6 +3,8 @@
   "references": [
     { "path": "../../../packages/api-plugin-commodo-db-proxy" },
     { "path": "../../../packages/api-security" },
+    { "path": "../../../packages/api-security-permissions-manager" },
+    { "path": "../../../packages/api-security-user-management" },
     { "path": "../../../packages/api-settings-manager" },
     { "path": "../../../packages/handler" },
     { "path": "../../../packages/handler-apollo-server" }
