--- a/api/formBuilder/package.json
+++ b/api/formBuilder/package.json
@@ -5,13 +5,15 @@
     "build": "webiny run build"
   },
   "dependencies": {
-    "@webiny/handler": "^4.0.0-beta.0",
-    "@webiny/handler-apollo-server": "^4.0.0-beta.0",
-    "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.0",
-    "@webiny/api-security": "^4.0.0-beta.0",
-    "@webiny/api-settings-manager": "^4.0.0-beta.0",
-    "@webiny/api-i18n": "^4.0.0-beta.0",
-    "@webiny/api-form-builder": "^4.0.0-beta.0",
-    "@webiny/project-utils": "^4.0.0-beta.4"
+    "@webiny/handler": "^4.9.0",
+    "@webiny/handler-apollo-server": "^4.9.0",
+    "@webiny/api-plugin-commodo-db-proxy": "^4.9.0",
+    "@webiny/api-plugin-security-cognito": "^4.6.0",
+    "@webiny/api-security": "^4.9.0",
+    "@webiny/api-security-permissions-manager": "^4.6.0",
+    "@webiny/api-settings-manager": "^4.9.0",
+    "@webiny/api-i18n": "^4.9.0",
+    "@webiny/api-form-builder": "^4.9.0",
+    "@webiny/project-utils": "^4.9.0"
   }
 }
