--- a/packages/app-template-admin/package.json
+++ b/packages/app-template-admin/package.json
@@ -25,6 +25,7 @@
     "@webiny/app-plugin-admin-welcome-screen": "^4.9.0",
     "@webiny/app-plugin-security-cognito": "^4.9.0",
     "@webiny/app-security": "^4.9.0",
+    "@webiny/app-security-user-management": "^4.6.0",
     "@webiny/app-template": "^4.9.0",
     "@webiny/plugins": "^4.9.0",
     "@webiny/react-router": "^4.9.0",
