--- a/api/security/validateAccessToken/tsconfig.json
+++ b/api/security/validateAccessToken/tsconfig.json
@@ -3,6 +3,7 @@
   "references": [
     { "path": "../../../packages/api-plugin-commodo-db-proxy" },
     { "path": "../../../packages/api-security" },
+    { "path":  "../../../packages/api-security-user-management"},
     { "path": "../../../packages/handler" },
     { "path": "../../../packages/handler-apollo-server" }
   ]
