--- a/.github/workflows/releaseLatest.yml
+++ b/.github/workflows/releaseLatest.yml
@@ -8,6 +8,10 @@ env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
   NODE_OPTIONS: --max_old_space_size=4096
+  MONGODB_SERVER: ${{ secrets.MONGODB_SERVER }}
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  WEBINY_TRACKING_PREFIX: ${{ secrets.WEBINY_TRACKING_PREFIX }}
 
 jobs:
   build-test-release:
