--- a/packages/app-plugin-page-builder-menu-element/tsconfig.json
+++ b/packages/app-plugin-page-builder-menu-element/tsconfig.json
@@ -1,3 +1,13 @@
 {
-  "extends": "../../tsconfig.json"
+  "extends": "../../tsconfig",
+  "references": [
+    { "path": "../app-admin" },
+    { "path": "../app-security" },
+    { "path": "../app-page-builder" },
+    { "path": "../graphql" },
+    { "path": "../api-security" },
+    { "path": "../api-settings-manager" },
+    { "path": "../commodo" },
+    { "path": "../commodo-graphql" }
+  ]
 }
