--- a/packages/app-admin/package.json
+++ b/packages/app-admin/package.json
@@ -10,6 +10,7 @@
   "author": "Pavel Denisjuk",
   "license": "MIT",
   "dependencies": {
+    "@apollo/client": "^3.1.4",
     "@babel/runtime": "^7.5.5",
     "@emotion/core": "^10.0.17",
     "@emotion/styled": "^10.0.17",
@@ -20,7 +21,6 @@
     "@webiny/plugins": "^4.9.0",
     "@webiny/react-router": "^4.9.0",
     "@webiny/ui": "^4.9.0",
-    "apollo-client": "^2.6.8",
     "bytes": "^3.1.0",
     "classnames": "^2.2.6",
     "dataurl-to-blob": "^0.0.1",
@@ -33,7 +33,6 @@
     "lodash": "^4.17.11",
     "lodash.get": "^4.4.2",
     "mime": "^2.4.2",
-    "react-apollo": "^3.1.3",
     "react-butterfiles": "^1.3.1",
     "react-hotkeyz": "^1.0.4",
     "react-lazy-load": "^3.0.13",
