--- a/packages/app-file-manager/package.json
+++ b/packages/app-file-manager/package.json
@@ -29,9 +29,9 @@
     "babel-plugin-named-asset-import": "^1.0.0-next.3e165448"
   },
   "peerDependencies": {
+    "@apollo/client": "^3.1.4",
     "graphql-tag": "^2.10.1",
-    "react": "^16.8.6",
-    "react-apollo": "^3.1.3"
+    "react": "^16.8.6"
   },
   "publishConfig": {
     "access": "public",
