--- a/packages/app-form-builder/package.json
+++ b/packages/app-form-builder/package.json
@@ -13,6 +13,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@apollo/client": "^3.1.4",
     "@babel/runtime": "^7.5.5",
     "@emotion/core": "^10.0.17",
     "@emotion/styled": "^10.0.17",
@@ -29,12 +30,10 @@
     "@webiny/react-router": "^4.9.0",
     "@webiny/ui": "^4.9.0",
     "@webiny/validation": "^4.9.0",
-    "apollo-client": "^2.2.8",
     "emotion": "^10.0.17",
     "graphql-tag": "^2.10.1",
     "lodash": "^4.17.10",
     "lodash.get": "^4.4.2",
-    "react-apollo": "^3.1.0",
     "react-dnd": "^9.3.4",
     "react-dnd-html5-backend": "^9.3.4",
     "react-google-recaptcha": "^1.1.0",
