--- a/packages/app-google-tag-manager/package.json
+++ b/packages/app-google-tag-manager/package.json
@@ -33,7 +33,7 @@
   "peerDependencies": {
     "graphql-tag": "^2.10.1",
     "react": "^16.8.6",
-    "react-apollo": "^3.1.3"
+    "@apollo/client": "^3.1.4"
   },
   "publishConfig": {
     "access": "public",
