--- a/packages/app-headless-cms/package.json
+++ b/packages/app-headless-cms/package.json
@@ -13,6 +13,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@apollo/client": "^3.1.4",
     "@babel/runtime": "^7.5.5",
     "@emotion/core": "^10.0.17",
     "@emotion/styled": "^10.0.17",
@@ -33,18 +34,12 @@
     "@webiny/react-router": "^4.9.0",
     "@webiny/ui": "^4.9.0",
     "@webiny/validation": "^4.9.0",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.2.8",
-    "apollo-link": "^1.2.14",
-    "apollo-link-batch-http": "^1.2.14",
-    "apollo-link-error": "^1.1.13",
     "classnames": "^2.2.6",
     "emotion": "^10.0.17",
     "graphql-tag": "^2.10.1",
     "lodash": "^4.17.10",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
-    "react-apollo": "^3.1.0",
     "react-dnd": "^9.3.4",
     "react-dnd-html5-backend": "^9.3.4",
     "react-helmet": "^5.2.0",
