--- a/packages/app-i18n/package.json
+++ b/packages/app-i18n/package.json
@@ -13,6 +13,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@apollo/client": "^3.1.4",
     "@babel/runtime": "^7.5.5",
     "@emotion/styled": "^10.0.17",
     "@webiny/app": "^4.9.0",
@@ -30,7 +31,6 @@
     "is-hotkey": "^0.1.3",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
-    "react-apollo": "^3.1.3",
     "react-helmet": "^5.2.0",
     "react-hotkeyz": "^1.0.4",
     "slate": "0.58.1",
