--- a/packages/app-page-builder-theme/package.json
+++ b/packages/app-page-builder-theme/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@apollo/client": "^3.1.4",
     "@webiny/app": "^4.9.0",
     "@webiny/app-page-builder": "^4.9.0",
     "@webiny/plugins": "^4.9.0",
@@ -12,7 +13,6 @@
     "emotion": "^10.0.17",
     "graphql-tag": "2.10.1",
     "lodash.get": "^4.4.2",
-    "react-apollo": "^3.1.0",
     "react-hamburger-menu": "^1.1.1",
     "react-helmet": "^5.2.0"
   },
