--- a/packages/app-page-builder/package.json
+++ b/packages/app-page-builder/package.json
@@ -9,6 +9,7 @@
   "author": "Pavel Denisjuk",
   "license": "MIT",
   "dependencies": {
+    "@apollo/client": "^3.1.4",
     "@babel/runtime": "^7.5.5",
     "@emotion/core": "^10.0.17",
     "@emotion/styled": "^10.0.17",
@@ -46,7 +47,6 @@
     "lodash.pick": "^4.4.0",
     "lorem-ipsum": "^1.0.5",
     "platform": "^1.3.5",
-    "react-apollo": "^3.1.3",
     "react-color": "^2.14.1",
     "react-dnd": "^9.3.4",
     "react-dnd-html5-backend": "^9.3.4",
