--- a/packages/app-plugin-security-cognito/package.json
+++ b/packages/app-plugin-security-cognito/package.json
@@ -12,19 +12,17 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@apollo/client": "^3.1.4",
     "@aws-amplify/auth": "^1.3.3",
     "@webiny/app": "^4.9.0",
     "@emotion/styled": "^10.0.27",
     "emotion": "^10.0.27",
-    "@webiny/app-security-user-management": "^4.9.0",
+    "@webiny/app-security-user-management": "^4.6.0",
     "@webiny/app-security": "^4.9.0",
     "@webiny/validation": "^4.9.0",
     "@webiny/form": "^4.9.0",
     "@webiny/ui": "^4.9.0",
-    "apollo-client": "^2.6.10",
-    "apollo-link-context": "^1.0.20",
-    "lodash": "^4.17.20",
-    "react-apollo": "^3.1.0"
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
