--- a/packages/app-security-user-management/package.json
+++ b/packages/app-security-user-management/package.json
@@ -13,6 +13,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@apollo/client": "^3.1.4",
     "@babel/runtime": "^7.5.5",
     "@emotion/styled": "^10.0.27",
     "@webiny/app": "^4.6.0",
@@ -27,7 +28,6 @@
     "emotion": "10.0.17",
     "graphql-tag": "^2.10.1",
     "lodash": "^4.17.11",
-    "react-apollo": "^3.1.3",
     "react-helmet": "^5.2.0"
   },
   "devDependencies": {
