--- a/packages/app-template-site/package.json
+++ b/packages/app-template-site/package.json
@@ -16,6 +16,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@apollo/client": "^3.1.4",
     "@babel/runtime": "^7.5.5",
     "@webiny/app": "^4.9.0",
     "@webiny/app-cookie-policy": "^4.9.0",
@@ -28,12 +29,7 @@
     "@webiny/app-page-builder-theme": "^4.9.0",
     "@webiny/app-template": "^4.9.0",
     "@webiny/app-typeform": "^4.9.0",
-    "@webiny/react-router": "^4.9.0",
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
-    "apollo-link": "^1.2.14",
-    "apollo-link-batch-http": "^1.2.14",
-    "react-apollo": "^3.1.3"
+    "@webiny/react-router": "^4.9.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
