--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,21 +14,19 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@apollo/client": "^3.1.4",
     "@babel/runtime": "^7.5.5",
     "@webiny/i18n": "^4.9.0",
     "@webiny/i18n-react": "^4.9.0",
     "@webiny/plugins": "^4.9.0",
     "@webiny/react-router": "^4.9.0",
     "@webiny/ui": "^4.9.0",
-    "apollo-client": "^2.6.8",
-    "apollo-link": "^1.2.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "invariant": "^2.2.4",
     "lodash": "^4.17.4",
     "lodash.get": "^4.4.2",
     "react": "^16.8.6",
-    "react-apollo": "^3.1.3",
     "react-dom": "^16.6.0",
     "warning": "^4.0.2"
   },
