--- a/packages/project-utils/package.json
+++ b/packages/project-utils/package.json
@@ -13,7 +13,7 @@
     "Adrian Smijulj <adrian@webiny.com>"
   ],
   "dependencies": {
-    "@apollo/react-ssr": "^3.1.5",
+    "@apollo/client": "^3.1.4",
     "@babel/core": "^7.9.6",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-syntax-object-rest-spread": "^7.8.3",
@@ -30,10 +30,6 @@
     "@webiny/handler-index": "^4.9.0",
     "@webiny/handler-ssr": "^4.9.0",
     "@webiny/react-router": "^4.9.0",
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
-    "apollo-link": "^1.2.14",
-    "apollo-link-http": "^1.5.17",
     "babel-loader": "8.0.6",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-named-asset-import": "^0.3.5",
@@ -65,7 +61,6 @@
     "postcss-safe-parser": "4.0.1",
     "raw-loader": "^4.0.1",
     "react": "^16.13.1",
-    "react-apollo": "^3.1.5",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
