--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -14,11 +14,10 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@apollo/client": "^3.1.4",
     "@babel/runtime": "^7.5.5",
     "@types/react-router-dom": "^5.1.5",
     "@webiny/plugins": "^4.9.0",
-    "apollo-client": "^2.6.8",
-    "react-apollo": "^3.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.0.0"
   },
