--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -145,6 +145,7 @@
     "./packages/serverless-aws-s3-object",
     "./packages/serverless-component",
     "./packages/serverless-function",
+    "./packages/tracking",
     "**resources.js",
     "./webiny.root.js"
   ]
