--- a/packages/app-page-builder/package.json
+++ b/packages/app-page-builder/package.json
@@ -27,6 +27,7 @@
     "@webiny/form": "^4.10.0",
     "@webiny/plugins": "^4.10.0",
     "@webiny/react-router": "^4.10.0",
+    "@webiny/tracking": "^4.10.0",
     "@webiny/ui": "^4.10.0",
     "@webiny/validation": "^4.10.0",
     "aos": "^2.3.4",
