fix: add `tsx` extension

--- a/packages/cli-plugin-scaffold-react-package/template/package.json
+++ b/packages/cli-plugin-scaffold-react-package/template/package.json
@@ -8,7 +8,7 @@
     "directory": "dist"
   },
   "scripts": {
-    "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts\"",
+    "build": "rimraf ./dist *.tsbuildinfo && babel src -d dist --source-maps --copy-files --extensions \".ts,.tsx\"",
     "watch": "babel src -d dist --source-maps --copy-files --extensions \".ts\" --watch",
     "postbuild": "cp package.json dist/ && tsc -p tsconfig.build.json"
   }
