--- a/packages/app-template-admin/package.json
+++ b/packages/app-template-admin/package.json
@@ -29,6 +29,7 @@
     "@webiny/app-template": "^4.11.0-beta.1",
     "@webiny/plugins": "^4.11.0-beta.1",
     "@webiny/react-router": "^4.11.0-beta.1",
+    "@webiny/tracking": "^4.11.0-beta.1",
     "@webiny/ui": "^4.11.0-beta.1",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
