fix: update version of @webiny/packages
add missing `references` in `api-security-user-management`

--- a/api/pageBuilder/package.json
+++ b/api/pageBuilder/package.json
@@ -10,8 +10,8 @@
     "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.0",
     "@webiny/api-settings-manager": "^4.0.0-beta.0",
     "@webiny/api-security": "^4.0.0-beta.0",
-    "@webiny/api-plugin-security-cognito": "^4.6.0",
-    "@webiny/api-security-permissions-manager": "^4.6.0",
+    "@webiny/api-plugin-security-cognito": "^4.11.0-beta.1",
+    "@webiny/api-security-permissions-manager": "^4.11.0-beta.1",
     "@webiny/api-google-tag-manager": "^4.0.0-beta.0",
     "@webiny/api-cookie-policy": "^4.0.0-beta.0",
     "@webiny/api-mailchimp": "^4.0.0-beta.0",
