--- a/api/security/graphql/package.json
+++ b/api/security/graphql/package.json
@@ -9,8 +9,8 @@
     "@webiny/handler-apollo-server": "^4.0.0-beta.0",
     "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.0",
     "@webiny/api-security": "^4.0.0-beta.0",
-    "@webiny/api-security-permissions-manager": "^4.6.0",
-    "@webiny/api-security-user-management": "^4.6.0",
+    "@webiny/api-security-permissions-manager": "^4.11.0-beta.1",
+    "@webiny/api-security-user-management": "^4.11.0-beta.1",
     "@webiny/api-plugin-security-cognito": "^4.0.0-beta.0",
     "@webiny/api-settings-manager": "^4.0.0-beta.0",
     "@webiny/project-utils": "^4.0.0-beta.4"
