--- a/api/security/validateAccessToken/package.json
+++ b/api/security/validateAccessToken/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "@webiny/handler": "^4.0.0-beta.0",
     "@webiny/api-plugin-commodo-db-proxy": "^4.0.0-beta.0",
-    "@webiny/api-security-user-management": "^4.6.0",
+    "@webiny/api-security-user-management": "^4.11.0-beta.1",
     "@webiny/project-utils": "^4.0.0-beta.4"
   }
 }
