--- a/packages/api-plugin-security-cognito/package.json
+++ b/packages/api-plugin-security-cognito/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "@webiny/api-security": "^4.11.0-beta.1",
-    "@webiny/api-security-user-management": "^4.6.0",
+    "@webiny/api-security-user-management": "^4.11.0-beta.1",
     "@webiny/graphql": "^4.11.0-beta.1",
     "graphql-tag": "^2.10.1",
     "jsonwebtoken": "^8.5.1",
