--- a/packages/api-security-permissions-manager/package.json
+++ b/packages/api-security-permissions-manager/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/api-security-permissions-manager",
-  "version": "4.6.0",
+  "version": "4.11.0-beta.1",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -12,8 +12,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@webiny/api-security": "^4.6.0",
-    "@webiny/graphql": "^4.6.0",
+    "@webiny/api-security": "^4.11.0-beta.1",
+    "@webiny/graphql": "^4.11.0-beta.1",
     "@webiny/handler": "^4.6.0"
   },
   "devDependencies": {
