--- a/packages/api-security-user-management/package.json
+++ b/packages/api-security-user-management/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/api-security-user-management",
-  "version": "4.6.0",
+  "version": "4.11.0-beta.1",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -12,11 +12,11 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@webiny/api-security": "^4.6.0",
-    "@webiny/commodo": "^4.6.0",
-    "@webiny/commodo-graphql": "^4.6.0",
-    "@webiny/graphql": "^4.6.0",
-    "@webiny/validation": "^4.6.0",
+    "@webiny/api-security": "^4.11.0-beta.1",
+    "@webiny/commodo": "^4.11.0-beta.1",
+    "@webiny/commodo-graphql": "^4.11.0-beta.1",
+    "@webiny/graphql": "^4.11.0-beta.1",
+    "@webiny/validation": "^4.11.0-beta.1",
     "graphql-tag": "^2.10.1",
     "lodash": "^4.17.20",
     "md5": "^2.3.0",
