--- a/packages/api-security-user-management/tsconfig.build.json
+++ b/packages/api-security-user-management/tsconfig.build.json
@@ -15,6 +15,8 @@
   },
   "references": [
     { "path": "../api-security/tsconfig.build.json" },
+    { "path": "../commodo/tsconfig.build.json" },
+    { "path": "../commodo-graphql/tsconfig.build.json" },
     { "path": "../graphql/tsconfig.build.json" },
     { "path": "../handler/tsconfig.build.json" }
   ]
