--- a/packages/app-security-user-management/package.json
+++ b/packages/app-security-user-management/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webiny/app-security-user-management",
-  "version": "4.6.0",
+  "version": "4.11.0-beta.1",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -15,14 +15,14 @@
   "dependencies": {
     "@babel/runtime": "^7.5.5",
     "@emotion/styled": "^10.0.27",
-    "@webiny/app": "^4.6.0",
-    "@webiny/app-admin": "^4.6.0",
-    "@webiny/app-security": "^4.6.0",
-    "@webiny/form": "^4.6.0",
-    "@webiny/plugins": "^4.6.0",
-    "@webiny/react-router": "^4.6.0",
-    "@webiny/ui": "^4.6.0",
-    "@webiny/validation": "^4.6.0",
+    "@webiny/app": "^4.11.0-beta.1",
+    "@webiny/app-admin": "^4.11.0-beta.1",
+    "@webiny/app-security": "^4.11.0-beta.1",
+    "@webiny/form": "^4.11.0-beta.1",
+    "@webiny/plugins": "^4.11.0-beta.1",
+    "@webiny/react-router": "^4.11.0-beta.1",
+    "@webiny/ui": "^4.11.0-beta.1",
+    "@webiny/validation": "^4.11.0-beta.1",
     "dot-prop-immutable": "^1.4.0",
     "emotion": "10.0.17",
     "graphql-tag": "^2.10.1",
